Tried to fix alignment

--- a/ice/styles/ice6styles.css
+++ b/ice/styles/ice6styles.css
@@ -5,6 +5,9 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: center;
+    align-items: center;
+    height: 100vh;
+    gap: 0;
 }
 .grid-box h1 {
     font-size: 10em;
@@ -27,4 +30,5 @@
     width: 100%;
     height: 100%;
     background-color: gray;
+    text-align: center;
 }
